# openmacro

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  converse.py  extensions.py  main.py  pyproject.toml  requirements.txt  setup.py  t.py
.github/workflows/: pylint.yml
cli/: __init__.py
openmacro/: __init__.py  __main__.py  cli.py  config.default.toml  profile.py  profile.template.py  profile.template.toml
openmacro/apps/: __init__.py
openmacro/computer/: __init__.py  test.py
openmacro/core/: __init__.py  cli.py  config.default.toml  core.py  defaults.py
openmacro/core/feature concepts/: interactive.txt
openmacro/core/llm/: samba.py
openmacro/core/prompts/: auto_skill.txt  classify.txt  conversational.txt  initial.txt  initial_task.txt  instructions.txt  interface.txt  memorise.txt  routine.txt  task.txt
openmacro/core/utils/: computer.py  engines.py  extensions.py  general.py  libmanager.py  llm.py  memory.py  model.py  profile.py
openmacro/extensions/: __init__.py
openmacro/extensions/browser/: __init__.py  browser.py  config.default.toml  omproject.toml
openmacro/llm/: __init__.py
openmacro/memory/: client.py  server.py
openmacro/omi/: __init__.py
openmacro/profile/: __init__.py  profile.py  template.py
openmacro/profiles/: default.yaml
openmacro/prompts/: classify.txt
openmacro/speech/: __init__.py  tts.py
openmacro/tests/: __init__.py  search.py  snippets.py
openmacro/utils/: __init__.py  computer.py  core.py  engines.py  model.py  screwdriver.py  supported.json
tests/: converse.py  search.py
(+20 files in other folders)
