[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openmacro"
version = "0.0.15"
description = "Multimodal Assistant. Human Interface for computers."
authors = ["Amor Budiyanto <amor.budiyanto@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amooo-ooo/openmacro"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
gradio_client = "^1.3.0" 
toml = "^0.10"
rich = "^10.0"

[tool.poetry.scripts]
macro = "openmacro.__main__:main"

[tool.poetry.extras]
dev = ["pytest"]
